--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 			 <th>ID</th>
 			 <th>Type</th>
 			 <th>Attributes</th>
-			 <th>Label Required</th>
+			 <th>Label <br>Required</th>
 		 </thead>
 		 <tbaody>
 			 <tr>
