--- a/main.html
+++ b/main.html
@@ -7,49 +7,45 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<h1>Feedback Form</h1>
-     <table>
-		 <thead>
-			 <th>
-				Element
-			 </th>
-			 <th>ID</th>
-			 <th>Type</th>
-			 <th>Attributes</th>
-			 <th>Label <br>Required</th>
-		 </thead>
-		 <tbaody>
-			 <tr>
-				 <td>Name</td>
-				 <td>name</td>
-				 <td>Text</td>
-				 <td>minlength="3"<br>maxlength="50", required</td>
-				 <td>Yes</td>
-			 </tr>
-			  <tr>
-				 <td>Portfolio</td>
-				 <td>portfolio</td>
-				 <td>URL</td>
-				 <td>required</td>
-				 <td>Yes</td>
-			 </tr>
-			   <tr>
-				 <td>Favorite<br>Color</td>
-				 <td>favColor</td>
-				 <td>Color</td>
-				 <td>N/A</td>
-				 <td>Yes</td>
-			 </tr>
-			   <tr>
-				 <td>Likeness</td>
-				 <td>likeness</td>
-				 <td>Range</td>
-				 <td>min="1", max="100"</td>
-				 <td>Yes</td>
-			 </tr>
-		 </tbaody>
-	 </table>
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Feedback Form</title>
+</head>
+<body>
+
+    <h1>Feedback Form</h1>
+
+    <form>
+        <!-- Name Input -->
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required minlength="3" maxlength="50">
+        <br><br>
+
+        <!-- Portfolio Input -->
+        <label for="portfolio">Portfolio:</label>
+        <input type="url" id="portfolio" name="portfolio" required>
+        <br><br>
+
+        <!-- Favorite Color Picker -->
+        <label for="favColor">Favorite Color:</label>
+        <input type="color" id="favColor" name="favColor">
+        <br><br>
+
+        <!-- Likeness Slider -->
+        <label for="likeness">How much do you like your color?</label>
+        <input type="range" id="likeness" name="likeness" min="1" max="100">
+        <br><br>
+
+        <!-- Submit Button -->
+        <button type="submit">Submit</button>
+    </form>
+
+</body>
+</html>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
